# python-lcms2

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
src/lcms2/: __init__.py  _lcms2.c
src/pylcms2/: __init__.py  _lcms2.c  implementation.py  profile.h  transform.h
tests/: lcms2_testsuite.py  test_builtin_profiles.py  test_profile_file_io.py  test_profile_memory_io.py  test_profiles_from_files.py  test_rgb_profiles.py  test_transforms.py  test_white_point.py
tools/: format_illuminants.py  format_rgb_colorspaces.py  illuminants.csv  list_data_types.py  rgb_color_spaces.csv  save_srgb.py
