[build-system]
requires = ["setuptools>=61.0", "numpy>=2.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcms2"
version = "0.0.19"
authors = [
    { name = "Roman Kosobrodov", email = "roman@kosobrodov.net" },
]
description = "Python binding for LittleCMS2 library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: C',
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    'Environment :: Console',
    'Topic :: Multimedia :: Graphics :: Graphics Conversion'
]
keywords = [""]
dependencies = ["numpy>=2.2.2"]

[project.urls]
"Homepage" = "https://github.com/RomanKosobrodov/python-lcms2"
"Bug Tracker" = "https://github.com/RomanKosobrodov/python-lcms2/issues"

